@@ -1,3 +1,13 @@
+2011-06-23   Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	refactor: split 'usage' subroutine in automake
+	This change is related to automake bug#7819.
+	* automake.in (print_autodist_files): New subroutine,
+	extracted from ...
+	(usage): ... this, which now uses it.
+	* tests/autodist-no-duplicate.test: New test.
+	* tests/Makefile.am (TESTS): Update.
+
 2011-06-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix bug in 'autodist.test'
